Fix SettingsTestCase.test[Metrics|Breakpad]Reporting on Official

The issue was:
* chrome_test_util::SetWWANStateTo() calls -connectionTypeChanged: on
the metrics mediator.
* -connectionTypeChanged: should only be called when the mediator cares
about WWAN status (DCHECK in the method).
* The metrics mediator doesn't care about WWAN status when not recording
or not on wifi-only ([self setWatchWWANEnabled:(optIn && wifiOnly)],
which turns off listening to connection type changes).

To fix it, I remove the calls to change the WWAN status within the test,
as it calls -connectionTypeChanged:, which is not expected on the
mediator in that configuration.

BUG=700839
R=liaoyuke@chromium.org,olivierrobin@chromium.org

Review-Url: https://codereview.chromium.org/2762623004
Cr-Commit-Position: refs/heads/master@{#458705}

Former-commit-id: 0e1ab062c1452c0baa9c9adf3ad9671c268e06fe